[gd_scene load_steps=7 format=3 uid="uid://dmnxgug705f5x"]

[ext_resource type="Texture2D" uid="uid://bq1iekrp120k8" path="res://Assets/Cards/frame.png" id="1_jm2dd"]
[ext_resource type="Script" path="res://Scripts/card.gd" id="1_q4s61"]
[ext_resource type="Texture2D" uid="uid://41ig44bg0f6o" path="res://Assets/Cards/mm.png" id="1_r80aa"]
[ext_resource type="Theme" uid="uid://7x2vxhh224gq" path="res://Themes/Label.tres" id="2_ommkb"]
[ext_resource type="FontFile" uid="uid://cm5jqx5aqk6e4" path="res://Assets/Fonts/NotoSansMNerdFont-ExtraBold.ttf" id="3_vxiuk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2pfl"]
size = Vector2(356, 544)

[node name="Card" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_q4s61")

[node name="CharacterImage" type="TextureRect" parent="."]
offset_left = -192.0
offset_top = -292.0
offset_right = 192.0
offset_bottom = 60.0
mouse_default_cursor_shape = 2
texture = ExtResource("1_r80aa")

[node name="CardFrame" type="TextureRect" parent="."]
unique_name_in_owner = true
offset_left = -200.0
offset_top = -300.0
offset_right = 200.0
offset_bottom = 300.0
mouse_default_cursor_shape = 2
texture = ExtResource("1_jm2dd")

[node name="Tag" type="Label" parent="." node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
offset_left = -190.0
offset_top = 92.0
offset_right = 190.0
offset_bottom = 122.0
mouse_filter = 1
mouse_default_cursor_shape = 2
shortcut_context = NodePath("..")
theme = ExtResource("2_ommkb")
theme_override_font_sizes/font_size = 18
text = "always between buy and sell"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true
max_lines_visible = 1

[node name="Name" type="Label" parent="." node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
offset_left = -190.0
offset_top = 60.0
offset_right = 190.0
offset_bottom = 91.0
mouse_filter = 1
mouse_default_cursor_shape = 2
shortcut_context = NodePath("..")
theme = ExtResource("2_ommkb")
text = "Market Maker Money Taker"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
max_lines_visible = 1

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_y2pfl")

[node name="CommunityLine" type="Line2D" parent="."]
visible = false
position = Vector2(20, 134)
points = PackedVector2Array(2, 0, 2, 48, 156, 48, 156, 0, 62, 0, 2, 0)
closed = true
width = 2.0
default_color = Color(1, 1, 0.0784314, 1)

[node name="WealthLine" type="Line2D" parent="."]
visible = false
position = Vector2(20, 182)
points = PackedVector2Array(2, 0, 2, 48, 156, 48, 156, 0, 62, 0, 2, 0)
closed = true
width = 2.0
default_color = Color(1, 1, 0.0784314, 1)

[node name="InfluenceLine" type="Line2D" parent="."]
visible = false
position = Vector2(-144, 134)
points = PackedVector2Array(2, 0, 2, 48, 156, 48, 156, 0, 62, 0, 2, 0)
closed = true
width = 2.0
default_color = Color(1, 1, 0.0784314, 1)

[node name="InnovationLine" type="Line2D" parent="."]
visible = false
position = Vector2(-144, 182)
points = PackedVector2Array(2, 0, 2, 48, 156, 48, 156, 0, 62, 0, 2, 0)
closed = true
width = 2.0
default_color = Color(1, 1, 0.0784314, 1)

[node name="DevSkillsLine" type="Line2D" parent="."]
visible = false
position = Vector2(-144, 226)
points = PackedVector2Array(2, 0, 2, 48, 156, 48, 156, 0, 62, 0, 2, 0)
closed = true
width = 2.0
default_color = Color(1, 1, 0.0784314, 1)

[node name="ImpactLine" type="Line2D" parent="."]
visible = false
position = Vector2(20, 226)
points = PackedVector2Array(2, 0, 2, 48, 156, 48, 156, 0, 62, 0, 2, 0)
closed = true
width = 2.0
default_color = Color(1, 1, 0.0784314, 1)

[node name="Innovation" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -86.0
offset_top = 196.0
offset_right = -38.0
offset_bottom = 230.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("3_vxiuk")
theme_override_font_sizes/font_size = 24
text = "29"
uppercase = true

[node name="DevSkills" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -86.0
offset_top = 240.0
offset_right = -38.0
offset_bottom = 274.0
theme_override_fonts/font = ExtResource("3_vxiuk")
theme_override_font_sizes/font_size = 24
text = "29"
uppercase = true

[node name="Community" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 76.0
offset_top = 150.0
offset_right = 124.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("3_vxiuk")
theme_override_font_sizes/font_size = 24
text = "29"
uppercase = true

[node name="Wealth" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 76.0
offset_top = 196.0
offset_right = 124.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("3_vxiuk")
theme_override_font_sizes/font_size = 24
text = "29"
uppercase = true

[node name="Influence" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -86.0
offset_top = 150.0
offset_right = -38.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("3_vxiuk")
theme_override_font_sizes/font_size = 24
text = "29"
uppercase = true

[node name="Impact" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 76.0
offset_top = 242.0
offset_right = 124.0
offset_bottom = 276.0
theme_override_fonts/font = ExtResource("3_vxiuk")
theme_override_font_sizes/font_size = 24
text = "29"
uppercase = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
